--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <title>HARDIK</title>
+    <link rel="icon" href="./dev121.gif" type="image/icon type">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
